--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.WeatherActivity"></activity>
+        <activity android:name=".ui.WeatherListActivity" />
+        <activity android:name=".ui.WeatherDetailActivity"></activity>
     </application>
 
 </manifest>
